--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
-        android:label="mana_uz"
+        android:label="Roza Electronics"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
